--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "postCreateCommand": "npm install -g aicommits",
-  "postStartCommand": "aicommits config set generate=5 model=gpt-3.5-turbo",
+  "postStartCommand": "aicommits config set generate=5 model=gpt-4-1106-preview",
   "customizations": {
     "vscode": {
       "extensions": ["llvm-vs-code-extensions.vscode-clangd"]
